Survey Form Final.html

--- a/Survey Form.html
+++ b/Survey Form.html
@@ -46,10 +46,10 @@
         <label><input type="checkbox" value="4" class="inline" >Grand Champion 3</label>
         <label><input type="checkbox" value="5" class="inline" >SuperSonicLegend</label>
         </fieldset>
-<fieldset id="bottom">
+<fieldset class="bottom">
         <textarea rows="3" columns="30" placeholder="Ton style de jeu: Mecanique, Teamplay, Rotation"></textarea>
         </fieldset>
-        <fieldset>
+        <fieldset class="bottom">
         <input type="submit" id="submit">
         </fieldset>
       
